[package]
name = "create_gh_repo"
version = "0.1.2"
authors = ["Nick Massey <nickmass@nickmass.com>"]

[dependencies]
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
hyper = "0.9"
tempfile = "2.1"
git2 = "0.4"
url = "1.2"
clap = "2.10"
log = "0.3"
env_logger = "0.3"
notify = "2.6"
rpassword = "0.2"
nom = "1.2"
