[package]
name = "create-gh-repo"
version = "0.1.3"
authors = ["Nick Massey <nickmass@nickmass.com>"]

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
#hyper = "0.9"
reqwest = "0.4"
tempfile = "2.1"
git2 = "0.6"
url = "1.2"
clap = "2.20"
log = "0.3"
env_logger = "0.3"
notify = "2.6"
rpassword = "0.2"
nom = "1.2"
